--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   margin:0;
   padding:0;
@@ -12,7 +13,9 @@
   margin: 0 auto;
   padding:0px 10px;
 }
-
+body{
+  background: rgb(255, 255, 255);
+}
 img{
   width: 100%;
 }
@@ -26,4 +29,15 @@ img{
 }
 .btn:hover{
   background: #424242;
+}
+
+.section-heading{
+  font-size: 28px;
+  font-weight: 600;
+  margin:40px 0px;
+  text-align: center;
+}
+.text-primary{
+  color:#7AB259;
+  text-align: center;
 }
